code quality metrix-integration
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>